samples/_failures_safe/1761526869_c49abb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9227144d.c: In function ‘main’:
./samples/SAFE/__tmp_9227144d.c:164:46: error: ‘MAX_’ undeclared (first use in this function)
  164 |     printf("Enter number of edges (0-%d): ", MAX_
      |                                              ^~~~
./samples/SAFE/__tmp_9227144d.c:164:46: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_9227144d.c:164:50: error: expected ‘)’ at end of input
  164 |     printf("Enter number of edges (0-%d): ", MAX_
      |           ~                                      ^
      |                                                  )
./samples/SAFE/__tmp_9227144d.c:164:5: error: expected declaration or statement at end of input
  164 |     printf("Enter number of edges (0-%d): ", MAX_
      |     ^~~~~~
